Fix alignment of topper tags  🐿2.5.10

--- a/_main.scss
+++ b/_main.scss
@@ -180,6 +180,9 @@
 
 .topper__brand {
 	-webkit-font-smoothing: antialiased;
+	@include oGridRespondTo($until: S) {
+		display: block;
+	}
 }
 
 .topper__tags {
